--- a/views/admin/edit-product.hbs
+++ b/views/admin/edit-product.hbs
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label for="Image">Image<span class="text-danger">*</span></label>
-                <img src="/images/product-images/{{product._id}}.png" class="form-control col-3" alt="Current Image" id="previewImage">
+                <img src="https://picsum.photos/300/300?random={{product._id}}" class="form-control col-3" alt="Current Image" id="previewImage">
                 <input type="file" class="form-control" name="Image" id="Image" placeholder="Product Image" onchange="changeImage(event)" />
             </div>
             <div class="form-group">
@@ -36,7 +36,7 @@
         if (event.target.files[0])
             document.getElementById('previewImage').src = URL.createObjectURL(event.target.files[0])
         else {
-            document.getElementById('previewImage').src = "/images/product-images/{{product._id}}.png"
+            document.getElementById('previewImage').src = "https://picsum.photos/300/300?random={{product._id}}"
 
         }
     }
