--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -1,32 +1,74 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>{{title}}</title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <title>{{title}}</title>
+  
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+  <!-- Font Awesome Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  
+  <!-- Custom CSS -->
+  <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 
 <body>
   <header>
-
+    {{#if admin}}
+    {{>admin-header}}
+    {{else}}
+    {{>user-header}}
+    {{/if}}
   </header>
-  {{#if admin}}
-  {{>admin-header}}
-  {{else}}
-  {{>user-header}}
-  {{/if}}
-  {{{body}}}  
-</body>
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-<script src="/javascripts/script.js"></script>
+  <main>
+    {{{body}}}
+  </main>
+
+  <footer class="bg-light py-5 mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h5 class="text-primary fw-bold">ECOMMERCE</h5>
+          <p class="text-muted">Your one-stop shop for all your needs. Quality products, fast delivery, and excellent customer service.</p>
+        </div>
+        <div class="col-md-3">
+          <h6 class="fw-bold">Quick Links</h6>
+          <ul class="list-unstyled">
+            <li><a href="/" class="text-muted text-decoration-none">Home</a></li>
+            <li><a href="/products" class="text-muted text-decoration-none">Products</a></li>
+            <li><a href="/cart" class="text-muted text-decoration-none">Cart</a></li>
+            <li><a href="/orders" class="text-muted text-decoration-none">Orders</a></li>
+          </ul>
+        </div>
+        <div class="col-md-3">
+          <h6 class="fw-bold">Contact</h6>
+          <p class="text-muted mb-1"><i class="fas fa-envelope me-2"></i>info@ecommerce.com</p>
+          <p class="text-muted mb-1"><i class="fas fa-phone me-2"></i>+1 (555) 123-4567</p>
+          <p class="text-muted"><i class="fas fa-map-marker-alt me-2"></i>123 Business St, City, State</p>
+        </div>
+      </div>
+      <hr class="my-4">
+      <div class="text-center text-muted">
+        <p>&copy; 2025 ECOMMERCE. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
+  <!-- Custom JS -->
+  <script src="/javascripts/script.js"></script>
+</body>
 
 </html>
