--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -1,27 +1,85 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-        aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="#">ECOMMERCE <span class="h6">admin</span></a>
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" href="/admin">Products <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/admin/Orders">Orders</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="/users">Users</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="/settings">Settings</a>
-            </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+    <div class="container">
+        <a class="navbar-brand fw-bold fs-3" href="/admin">
+            <i class="fas fa-cog me-2"></i>ECOMMERCE
+            <span class="badge bg-warning text-dark ms-2">Admin</span>
+        </a>
+        
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#adminNavbar" 
+                aria-controls="adminNavbar" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-bars text-primary fs-4"></i>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="adminNavbar">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link fw-500" href="/admin">
+                        <i class="fas fa-box me-1"></i>Products
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fw-500" href="/admin/orders">
+                        <i class="fas fa-shopping-bag me-1"></i>Orders
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fw-500" href="/admin/users">
+                        <i class="fas fa-users me-1"></i>Users
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fw-500" href="/admin/analytics">
+                        <i class="fas fa-chart-bar me-1"></i>Analytics
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fw-500" href="/admin/settings">
+                        <i class="fas fa-cog me-1"></i>Settings
+                    </a>
+                </li>
+            </ul>
+            
+            <ul class="navbar-nav">
+                <li class="nav-item me-3">
+                    <form class="d-flex">
+                        <div class="input-group">
+                            <input class="form-control bg-light border-0" type="search" 
+                                   placeholder="Search..." aria-label="Search">
+                            <button class="btn btn-outline-light" type="submit">
+                                <i class="fas fa-search"></i>
+                            </button>
+                        </div>
+                    </form>
+                </li>
+                
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle fw-500 d-flex align-items-center" href="#" id="adminDropdown" role="button" 
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        <div class="profile-avatar me-2">
+                            <img src="https://ui-avatars.com/api/?name={{user.fullname}}&background=dc3545&color=fff&size=32&rounded=true" 
+                                 alt="{{user.fullname}}" class="rounded-circle" width="32" height="32">
+                        </div>
+                        <span class="d-none d-md-inline">{{user.fullname}}</span>
+                        <span class="badge bg-warning text-dark ms-2">Admin</span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" href="/admin/profile">
+                            <i class="fas fa-user me-2"></i>Profile
+                        </a></li>
+                        <li><a class="dropdown-item" href="/admin/settings">
+                            <i class="fas fa-cog me-2"></i>Settings
+                        </a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="/">
+                            <i class="fas fa-home me-2"></i>View Site
+                        </a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item text-danger" href="/logout">
+                            <i class="fas fa-sign-out-alt me-2"></i>Logout
+                        </a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
