--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -1,38 +1,99 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="/">ECOMMERCE</a>
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Products <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/cart">Cart <span id="cartCountBadge" class="badge badge-success">{{cartCount}}</span></a>
-            </li>
-            {{#if user}}
-            <li class="nav-item">
-                <a class="nav-link disabled" href="/orders">Orders</a>
-            </li>
-            {{/if}}
-        </ul>
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ondblclick="easyLogin()">
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+    <div class="container">
+        <a class="navbar-brand fw-bold fs-3 text-primary" href="/">
+            <i class="fas fa-store me-2"></i>ECOMMERCE
+        </a>
+        
+        <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-bars text-primary fs-4"></i>
+        </button>
+        
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                    <a class="nav-link fw-500" href="/" data-no-transition>
+                        <i class="fas fa-home me-1"></i>Home
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fw-500" href="/products" data-no-transition>
+                        <i class="fas fa-box me-1"></i>Products
+                    </a>
+                </li>
                 {{#if user}}
-                {{user.fullname}}
-                {{else}}
-                Account
+                <li class="nav-item">
+                    <a class="nav-link fw-500" href="/orders" data-no-transition>
+                        <i class="fas fa-receipt me-1"></i>Orders
+                    </a>
+                </li>
+                {{#if user.role}}
+                {{#if (eq user.role 'admin')}}
+                <li class="nav-item">
+                    <a class="nav-link fw-500" href="/admin" data-no-transition>
+                        <i class="fas fa-cog me-1"></i>Admin
+                    </a>
+                </li>
                 {{/if}}
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                {{#if user}}
-                <a class="dropdown-item" href="#">settings</a>
-                <a class="dropdown-item" href="/logout">logout</a>
-                {{else}}
-                <a class="dropdown-item" href="/login">Login</a>
                 {{/if}}
-            </div>
+                {{/if}}
+            </ul>
+            
+            <ul class="navbar-nav">
+                <li class="nav-item me-3">
+                    <a class="nav-link position-relative fw-500" href="/cart">
+                        <i class="fas fa-shopping-cart me-1"></i>Cart
+                        {{#if cartCount}}
+                        <span id="cartCountBadge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                            {{cartCount}}
+                        </span>
+                        {{else}}
+                        <span id="cartCountBadge" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger d-none">
+                            0
+                        </span>
+                        {{/if}}
+                    </a>
+                </li>
+                
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle fw-500 d-flex align-items-center" href="#" id="navbarDropdown" role="button" 
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        {{#if user}}
+                        <div class="profile-avatar me-2">
+                            <img src="https://ui-avatars.com/api/?name={{user.fullname}}&background=6366f1&color=fff&size=32&rounded=true" 
+                                 alt="{{user.fullname}}" class="rounded-circle" width="32" height="32">
+                        </div>
+                        <span class="d-none d-md-inline">{{user.fullname}}</span>
+                        {{else}}
+                        <div class="profile-avatar me-2">
+                            <i class="fas fa-user-circle fs-5 text-muted"></i>
+                        </div>
+                        <span class="d-none d-md-inline">Account</span>
+                        {{/if}}
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end shadow">
+                        {{#if user}}
+                        <li><a class="dropdown-item" href="/profile">
+                            <i class="fas fa-user-cog me-2"></i>Profile Settings
+                        </a></li>
+                        <li><a class="dropdown-item" href="/orders">
+                            <i class="fas fa-box me-2"></i>My Orders
+                        </a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item text-danger" href="/logout">
+                            <i class="fas fa-sign-out-alt me-2"></i>Logout
+                        </a></li>
+                        {{else}}
+                        <li><a class="dropdown-item" href="/login">
+                            <i class="fas fa-sign-in-alt me-2"></i>Login
+                        </a></li>
+                        <li><a class="dropdown-item" href="/signup">
+                            <i class="fas fa-user-plus me-2"></i>Sign Up
+                        </a></li>
+                        {{/if}}
+                    </ul>
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
